TeamCode/src/main/java/org/firstinspires/ftc/teamcode/auxilary/dsls/autoauto/aa-parser.js
module.exports = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { autoautoFile: peg$parseautoautoFile },
        peg$startRuleFunction  = peg$parseautoautoFile,

        peg$c0 = function(f, s) {
          	return {
              type: "Program", location: location(),
              frontMatter: f,
              statepaths: s
            }
          },
        peg$c1 = function(heads, tail) {
           return {
             type: "FrontMatter", location: location(),
             values: heads.map(x=>x[0]).concat([tail])
           }
         },
        peg$c2 = function(k, v) {
           return {
             type: "FrontMatterKeyValue", location: location(),
             key: k,
             value: v
           }
         },
        peg$c3 = function(l, s) {
           return { type: "LabeledStatepath", location: location(), statepath: s, label: l }
         },
        peg$c4 = function(heads, tail) {
          	return {
              type: "Statepath", location: location(),
              states: heads.map(x=>x[0]).concat([tail])
            }
          },
        peg$c5 = function(heads, tail) {
            return {
              type: "State", location: location(),
              statement: heads.map(x=>x[0]).concat([tail])
            }
          },
        peg$c6 = function(s) { return s; },
        peg$c7 = function(u, s) { return { type: "AfterStatement", location: location(), unitValue: u, statement: s } },
        peg$c8 = function(f) { return { type: "FunctionCallStatement", location: location(), call: f } },
        peg$c9 = function(p) { return { type: "GotoStatement", location: location(), path: p } },
        peg$c10 = function(t, s) { return { type: "IfStatement", location: location(), conditional: t, statement: s } },
        peg$c11 = function(v, val) { return { type: "LetStatement", location: location(), variable: v, value: val } },
        peg$c12 = function() { return { type: "NextStatement", location: location() }   },
        peg$c13 = function(s) { return { type: "SkipStatement", location: location(), skip: s }   },
        peg$c14 = function(b) { return b },
        peg$c15 = function(v) { return v; },
        peg$c16 = function(l, o, r) {
            return { type: "OperatorExpression", location: location(), operator: o, left: l, right: r }
        },
        peg$c17 = function(b) { return b; },
        peg$c18 = function(m) { return m; },
        peg$c19 = function(l, o, r) { return [o, r]; },
        peg$c20 = function(l, tail) {
          var r = { type: "OperatorExpression", location: location(), left: l };
          var tar = r;
          for(var i = 0; i < tail.length - 1; i++) {
            tar.operator = tail[i][0];
            var newTar = { type: "OperatorExpression", location: location(), left: tail[i][1] };
            tar.right = newTar;
            tar = newTar;
          }
          tar.operator = tail[tail.length - 1][0];
          tar.right = tail[tail.length - 1][1];
          return r;
        },
        peg$c21 = function(p) { return p; },
        peg$c22 = function(s) {
           return s;
         },
        peg$c23 = function(x) {
           return x;
         },
        peg$c24 = function(i) { return { type: "VariableReference", location: location(), variable: i }; },
        peg$c25 = function(a) {
         return {
           type: "ArrayLiteral", location: location(),
           elems: a || {type:"ArgumentList",args:[], location: location()}
         }
        },
        peg$c26 = function(l, o, r) { return { type: "ComparisonOperator", location: location(), left: l, operator: o, right: r }; },
        peg$c27 = function() { return { type: "BooleanLiteral", location: location(), value: true }; },
        peg$c28 = function() { return { type: "BooleanLiteral", location: location(), value: false }; },
        peg$c29 = function(r) { return r; },
        peg$c30 = function(o) { return o; },
        peg$c31 = function(f, a) {
         return {
           type: "FunctionCall", location: location(),
           func: f, args: a || {type:"ArgumentList",args:[], location: location()}
         }
        },
        peg$c32 = function(q) { return { type: "StringLiteral", location: location(), str: q.join("") } },
        peg$c33 = function(u) { return u; },
        peg$c34 = function(heads, tail) {
         return {
           type: "ArgumentList", location: location(),
           len: heads.length + 1,
           args: heads.map(x=> x[0]).concat([tail])
         }
        },
        peg$c35 = /^[ \t\n\r]/,
        peg$c36 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),
        peg$c37 = "//",
        peg$c38 = peg$literalExpectation("//", false),
        peg$c39 = /^[^\n]/,
        peg$c40 = peg$classExpectation(["\n"], true, false),
        peg$c41 = "\n",
        peg$c42 = peg$literalExpectation("\n", false),
        peg$c43 = "/*",
        peg$c44 = peg$literalExpectation("/*", false),
        peg$c45 = "*/",
        peg$c46 = peg$literalExpectation("*/", false),
        peg$c47 = peg$anyExpectation(),
        peg$c48 = /^[^"]/,
        peg$c49 = peg$classExpectation(["\""], true, false),
        peg$c50 = "\"",
        peg$c51 = peg$literalExpectation("\"", false),
        peg$c52 = "#",
        peg$c53 = peg$literalExpectation("#", false),
        peg$c54 = "\r",
        peg$c55 = peg$literalExpectation("\r", false),
        peg$c56 = ":",
        peg$c57 = peg$literalExpectation(":", false),
        peg$c58 = ";",
        peg$c59 = peg$literalExpectation(";", false),
        peg$c60 = ",",
        peg$c61 = peg$literalExpectation(",", false),
        peg$c62 = "after",
        peg$c63 = peg$literalExpectation("after", false),
        peg$c64 = "goto",
        peg$c65 = peg$literalExpectation("goto", false),
        peg$c66 = "if",
        peg$c67 = peg$literalExpectation("if", false),
        peg$c68 = "(",
        peg$c69 = peg$literalExpectation("(", false),
        peg$c70 = ")",
        peg$c71 = peg$literalExpectation(")", false),
        peg$c72 = "let",
        peg$c73 = peg$literalExpectation("let", false),
        peg$c74 = "=",
        peg$c75 = peg$literalExpectation("=", false),
        peg$c76 = "next",
        peg$c77 = peg$literalExpectation("next", false),
        peg$c78 = "skip",
        peg$c79 = peg$literalExpectation("skip", false),
        peg$c80 = "<=",
        peg$c81 = peg$literalExpectation("<=", false),
        peg$c82 = "==",
        peg$c83 = peg$literalExpectation("==", false),
        peg$c84 = "!=",
        peg$c85 = peg$literalExpectation("!=", false),
        peg$c86 = ">=",
        peg$c87 = peg$literalExpectation(">=", false),
        peg$c88 = ">",
        peg$c89 = peg$literalExpectation(">", false),
        peg$c90 = "<",
        peg$c91 = peg$literalExpectation("<", false),
        peg$c92 = "true",
        peg$c93 = peg$literalExpectation("true", false),
        peg$c94 = "false",
        peg$c95 = peg$literalExpectation("false", false),
        peg$c96 = "+",
        peg$c97 = peg$literalExpectation("+", false),
        peg$c98 = "-",
        peg$c99 = peg$literalExpectation("-", false),
        peg$c100 = "/",
        peg$c101 = peg$literalExpectation("/", false),
        peg$c102 = "*",
        peg$c103 = peg$literalExpectation("*", false),
        peg$c104 = "%",
        peg$c105 = peg$literalExpectation("%", false),
        peg$c106 = "^",
        peg$c107 = peg$literalExpectation("^", false),
        peg$c108 = "$",
        peg$c109 = peg$literalExpectation("$", false),
        peg$c110 = "[",
        peg$c111 = peg$literalExpectation("[", false),
        peg$c112 = "]",
        peg$c113 = peg$literalExpectation("]", false),
        peg$c114 = function(l) {
            var name = l.join("");
            var reserved = ["if", "goto", "skip", "let", "next"];
            if(reserved.indexOf(name) == -1) return true;
            else return false;
            },
        peg$c115 = function(l) { return { type: "Identifier", location: location(), value: l.join("") } },
        peg$c116 = /^[0-9]/,
        peg$c117 = peg$classExpectation([["0", "9"]], false, false),
        peg$c118 = /^[A-Za-z]/,
        peg$c119 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
        peg$c120 = function(i) { return i; },
        peg$c121 = ".",
        peg$c122 = peg$literalExpectation(".", false),
        peg$c123 = function(m, h, t) { return h.join("") + "." + t.join("") },
        peg$c124 = function(m, d) { return d.join(""); },
        peg$c125 = "f",
        peg$c126 = peg$literalExpectation("f", false),
        peg$c127 = function(m, v) {
            return { type: "NumericValue", location: location(), v: parseFloat((m||"") + v ) }
        },
        peg$c128 = function(n, u) {
            return { type: "UnitValue", location: location(), value: n, unit: u }
        },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseautoautoFile() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsefrontMatter();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parselabeledStatepath();
            if (s5 !== peg$FAILED) {
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parselabeledStatepath();
              }
            } else {
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c0(s2, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefrontMatter() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parseDOLLAR_SIGN();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parsefrontMatterKeyValue();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseCOMMA();
            if (s6 !== peg$FAILED) {
              s7 = peg$parse_();
              if (s7 !== peg$FAILED) {
                s5 = [s5, s6, s7];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parsefrontMatterKeyValue();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseCOMMA();
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                if (s7 !== peg$FAILED) {
                  s5 = [s5, s6, s7];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parsefrontMatterKeyValue();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                s6 = peg$parseDOLLAR_SIGN();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c1(s3, s4);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefrontMatterKeyValue() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseIDENTIFIER();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseCOLON();
        if (s2 !== peg$FAILED) {
          s3 = peg$parse_();
          if (s3 !== peg$FAILED) {
            s4 = peg$parsevalue();
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c2(s1, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parselabeledStatepath() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSTATEPATH_LABEL_ID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseCOLON();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            if (s4 !== peg$FAILED) {
              s5 = peg$parsestatepath();
              if (s5 !== peg$FAILED) {
                s6 = peg$parse_();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c3(s2, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatepath() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsestate();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseSEMICOLON();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsestate();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseSEMICOLON();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsestate();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseSEMICOLON();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c4(s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestate() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$parsestatement();
        if (s4 !== peg$FAILED) {
          s5 = peg$parseCOMMA();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$parsestatement();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseCOMMA();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsestatement();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseCOMMA();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parse_();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c5(s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsestatement() {
      var s0, s1, s2, s3;
